--- a/devops/local_conf/nginx.conf
+++ b/devops/local_conf/nginx.conf
@@ -1,7 +1,7 @@
 events {
-  worker_connections 1024; # increase if you have lots of clients
-  accept_mutex off; # set to 'on' if nginx worker_processes > 1
-  use epoll;
+    worker_connections 1024; # increase if you have lots of clients
+    accept_mutex off; # set to 'on' if nginx worker_processes > 1
+    use epoll;
 }
 http {
 
@@ -12,8 +12,8 @@ http {
 
     # Map URI → project ID when using assets route (for auth checking)
     map $request_uri $project_id {
-        ~^/assets/(\d+)/  $1;
-        default           "";
+        ~^/assets/(\d+)/ $1;
+        default "";
     }
 
     server {
@@ -34,13 +34,14 @@ http {
             }
 
             rewrite ^/api(.*) /$1 break;
-            proxy_pass http://geoapi:8000;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
+            proxy_pass http://geoapi_backend:8000/;
+
+            proxy_redirect off;
+
             proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $server_name;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
