--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11-slim AS python-base
+FROM python:3.12-slim AS python-base
 
 LABEL maintainer="DesignSafe-CI <designsafe-ci@tacc.utexas.edu>"
 
@@ -14,12 +14,13 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # https://python-poetry.org/docs/configuration/#using-environment-variables
-ENV POETRY_VERSION=1.8 \
+ENV POETRY_VERSION=2.1 \
     POETRY_HOME="/opt/poetry" \
     POETRY_VIRTUALENVS_IN_PROJECT=true \
     PYSETUP_PATH="/opt/pysetup" \
     VENV_PATH="/opt/pysetup/.venv"
 
+# prepend venv and poetry to path
 ENV PATH="$VENV_PATH/bin:$POETRY_HOME/bin:$PATH"
 
 # Install poetry version $POETRY_VERSION to $POETRY_HOME
@@ -29,15 +30,21 @@ RUN pip3 install --no-cache-dir --upgrade pip setuptools wheel \
 
 # Copy project requirement files to ensure they will be cached.
 WORKDIR $PYSETUP_PATH
-
 COPY devops/poetry.lock devops/pyproject.toml ./
+
+# install runtime deps - uses $POETRY_VIRTUALENVS_IN_PROJECT internally
+RUN poetry install
 
 ##############
 # `development` image target is used for local development
 FROM python-base AS development
 
+# copy in our built poetry + venv
+COPY --from=python-base $POETRY_HOME $POETRY_HOME
+COPY --from=python-base $PYSETUP_PATH $PYSETUP_PATH
+
 # Install dev dependencies
-RUN "$POETRY_HOME/bin/poetry" install --with dev,flask,worker
+RUN poetry install --with dev
 
 COPY geoapi /app/geoapi
 
@@ -50,7 +57,7 @@ WORKDIR /app/geoapi
 FROM python-base AS production
 
 # Install runtime dependencies
-RUN "$POETRY_HOME/bin/poetry" install --with flask,worker
+COPY --from=python-base $PYSETUP_PATH $PYSETUP_PATH
 
 COPY geoapi /app/geoapi
 
