--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -14,7 +14,7 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # https://python-poetry.org/docs/configuration/#using-environment-variables
-ENV POETRY_VERSION=2.1 \
+ENV POETRY_VERSION=2.1.3 \
     POETRY_HOME="/opt/poetry" \
     POETRY_VIRTUALENVS_IN_PROJECT=true \
     PYSETUP_PATH="/opt/pysetup" \
@@ -26,7 +26,7 @@ ENV PATH="$VENV_PATH/bin:$POETRY_HOME/bin:$PATH"
 # Install poetry version $POETRY_VERSION to $POETRY_HOME
 RUN pip3 install --no-cache-dir --upgrade pip setuptools wheel \
     && python3 -m venv "$POETRY_HOME" \
-    && "$POETRY_HOME/bin/pip" install --no-cache-dir poetry=="$POETRY_VERSION"
+    && "$POETRY_HOME/bin/pip" install --no-cache-dir poetry~="$POETRY_VERSION"
 
 # Copy project requirement files to ensure they will be cached.
 WORKDIR $PYSETUP_PATH
