create user for celery to interact with volumes

--- a/devops/Dockerfile.worker
+++ b/devops/Dockerfile.worker
@@ -103,6 +103,8 @@ ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 RUN echo '. /opt/conda/etc/profile.d/conda.sh' >> /root/.bashrc && \
     echo 'conda activate py312env' >> /root/.bashrc
 
+RUN useradd -s /sbin/nologin celeryuser
+
 # Set a default command (can be overridden by docker-compose)
 CMD ["bash"]
 
