fix geoapi_backend reference

--- a/devops/local_conf/nginx.conf
+++ b/devops/local_conf/nginx.conf
@@ -83,7 +83,7 @@ http {
             add_header Access-Control-Allow-Origin *;
             add_header Access-Control-Allow-Headers *;
 
-            proxy_pass http://geoapi:8000/projects/$project_id/check-access/;
+            proxy_pass http://geoapi_backend:8000/projects/$project_id/check-access/;
 
             proxy_pass_request_body off;
             proxy_set_header Content-Length "";
