fix nginx always flags; handle unauthenticated and permission denied errors separately; handle token refresh error on auth check

--- a/devops/local_conf/nginx.conf
+++ b/devops/local_conf/nginx.conf
@@ -24,8 +24,8 @@ http {
 
             # Preflighted requests
             if ($request_method = OPTIONS ) {
-                add_header 'Access-Control-Allow-Origin' 'http://localhost:4200';
-                add_header 'Access-Control-Allow-Credentials' 'true';
+                add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, HEAD, PUT, DELETE' always;
                 add_header 'Access-Control-Allow-Headers' 'x-csrftoken,x-guest-uuid,content-type,x-geoapi-application,x-geoapi-ispublicview,x-tapis-token' always;
                 add_header 'Access-Control-Max-Age' 86400 always;
@@ -33,8 +33,8 @@ http {
                 return 204;
             }
 
-            add_header 'Access-Control-Allow-Origin' 'http://localhost:4200';
-            add_header 'Access-Control-Allow-Credentials' 'true';
+            add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, HEAD, PUT, DELETE' always;
             add_header 'Access-Control-Allow-Headers' 'x-csrftoken,x-guest-uuid,content-type,x-geoapi-application,x-geoapi-ispublicview,x-tapis-token' always;
 
