add path for celerybeat

--- a/devops/Dockerfile.worker
+++ b/devops/Dockerfile.worker
@@ -104,6 +104,7 @@ RUN echo '. /opt/conda/etc/profile.d/conda.sh' >> /root/.bashrc && \
     echo 'conda activate py312env' >> /root/.bashrc
 
 RUN useradd -s /sbin/nologin celeryuser
+RUN mkdir -p /var/run/celery && chown -R celeryuser:celeryuser /var/run/celery
 
 # Set a default command (can be overridden by docker-compose)
 CMD ["bash"]
