--- a/devops/local_conf/nginx.conf
+++ b/devops/local_conf/nginx.conf
@@ -40,6 +40,9 @@ http {
 
             rewrite ^/api(.*) /$1 break;
             proxy_pass http://geoapi_backend:8000/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
 
             proxy_redirect off;
 
