--- a/devops/local_conf/nginx.conf
+++ b/devops/local_conf/nginx.conf
@@ -10,12 +10,13 @@ http {
     gzip_types *;
     gzip_min_length 250;
 
-    # Map URI → project ID when using assets route (for auth checking)
-    map $request_uri $project_id {
-        ~^/assets/(\d+)/ $1;
-        default "";
+    # Map URI or query id to get project ID when using assets route (for auth checking)
+    # This handles both the /assets case (uri path) and tiler's url=file:///assets/ (tquery)
+    map "$request_uri $arg_url" $project_id {
+        ~*/assets/([0-9]+)/      $1;       # e.g. /assets/3/...
+        ~*file:///assets/([0-9]+)/  $1;     # e.g. ?url=file:///assets/3/...
+        default                  "";
     }
-
     server {
         include /etc/nginx/mime.types;
         client_max_body_size 1g;
@@ -79,6 +80,35 @@ http {
                 return 204;
             }
         }
+
+        location /tiles/ {
+          auth_request /auth-check;
+          proxy_pass http://geoapi_titiler:80;
+
+          add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
+          add_header 'Access-Control-Allow-Credentials' 'true' always;
+          add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+          add_header 'Access-Control-Allow-Headers' 'x-csrftoken,x-guest-uuid,content-type,x-geoapi-application,x-geoapi-ispublicview,x-tapis-token' always;
+
+
+          if ($request_method = OPTIONS ) {
+            add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'x-csrftoken,x-guest-uuid,content-type,x-geoapi-application,x-geoapi-ispublicview,x-tapis-token' always;
+            add_header 'Access-Control-Max-Age' 86400 always;
+            add_header 'Content-Length' 0 always;
+            return 204;
+          }
+
+          proxy_http_version 1.1;
+          proxy_set_header Host $host;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-Proto $scheme;
+          proxy_set_header X-Forwarded-Host $server_name;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
 
         location = /auth-check {
             internal;
