Rework tiles service and cog conversion

--- a/devops/local_conf/nginx.conf
+++ b/devops/local_conf/nginx.conf
@@ -81,32 +81,49 @@ http {
             }
         }
 
+        # TiTiler health/docs endpoints (no auth needed)
+        location ~ ^/tiles/(healthz|docs|openapi\.json) {
+            add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+
+            rewrite ^/tiles/(.*) /$1 break;
+            proxy_pass http://geoapi_titiler:80;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+        }
+
         location /tiles/ {
-          auth_request /auth-check;
-          proxy_pass http://geoapi_titiler:80;
+            # Call geoapi to check access (i.e. user has acccess to project or project is public) before serving file
+            # auth_request /auth-check;
 
-          add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
-          add_header 'Access-Control-Allow-Credentials' 'true' always;
-          add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
-          add_header 'Access-Control-Allow-Headers' 'x-csrftoken,x-guest-uuid,content-type,x-geoapi-application,x-geoapi-ispublicview,x-tapis-token' always;
-
-
-          if ($request_method = OPTIONS ) {
+            # CRITICAL: Add CORS headers BEFORE proxy_pass
             add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'x-csrftoken,x-guest-uuid,content-type,x-geoapi-application,x-geoapi-ispublicview,x-tapis-token' always;
-            add_header 'Access-Control-Max-Age' 86400 always;
-            add_header 'Content-Length' 0 always;
-            return 204;
-          }
 
-          proxy_http_version 1.1;
-          proxy_set_header Host $host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-Proto $scheme;
-          proxy_set_header X-Forwarded-Host $server_name;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            if ($request_method = OPTIONS) {
+                add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'x-csrftoken,x-guest-uuid,content-type,x-geoapi-application,x-geoapi-ispublicview,x-tapis-token' always;
+                add_header 'Access-Control-Max-Age' 86400 always;
+                add_header 'Content-Length' 0 always;
+                return 204;
+            }
+
+            # Strip /tiles prefix and pass to TiTiler
+            rewrite ^/tiles/(.*) /$1 break;
+            proxy_pass http://geoapi_titiler:80;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $server_name;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+            # Hide backend errors to prevent leaking info
+            proxy_intercept_errors on;
         }
 
 
