celery worker user 1100

--- a/devops/Dockerfile.worker
+++ b/devops/Dockerfile.worker
@@ -125,6 +125,8 @@ COPY geoapi /app/geoapi
 
 ENV PYTHONPATH=/app
 
+USER 1100:1100
+
 WORKDIR /app/geoapi
 
 ##############
@@ -137,5 +139,7 @@ COPY --from=python-base $PYSETUP_PATH $PYSETUP_PATH
 COPY geoapi /app/geoapi
 
 ENV PYTHONPATH=/app
+
+USER 1100:1100
 
 WORKDIR /app/geoapi
