Allow x-csrftoken-local

--- a/devops/local_conf/nginx.conf
+++ b/devops/local_conf/nginx.conf
@@ -28,7 +28,7 @@ http {
                 add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
                 add_header 'Access-Control-Allow-Credentials' 'true' always;
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, HEAD, PUT, DELETE' always;
-                add_header 'Access-Control-Allow-Headers' 'x-csrftoken,x-guest-uuid,content-type,x-geoapi-application,x-geoapi-ispublicview,x-tapis-token' always;
+                add_header 'Access-Control-Allow-Headers' 'x-csrftoken-local,x-guest-uuid,content-type,x-geoapi-application,x-geoapi-ispublicview,x-tapis-token' always;
                 add_header 'Access-Control-Max-Age' 86400 always;
                 add_header 'Content-Length' 0 always;
                 return 204;
@@ -37,7 +37,7 @@ http {
             add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, HEAD, PUT, DELETE' always;
-            add_header 'Access-Control-Allow-Headers' 'x-csrftoken,x-guest-uuid,content-type,x-geoapi-application,x-geoapi-ispublicview,x-tapis-token' always;
+            add_header 'Access-Control-Allow-Headers' 'x-csrftoken-local,x-guest-uuid,content-type,x-geoapi-application,x-geoapi-ispublicview,x-tapis-token' always;
 
             rewrite ^/api(.*) /$1 break;
             proxy_pass http://geoapi_backend:8000/;
