task/WG-42-support-importing-geotiff (#252)
* Add test fixtures for raster

* Add initial work on titiler/cog

* Rework titiler/cog process

* Rework tiles service and cog conversion

* enable engine_config

* add more workers locallyg

* fix mapillary auth; revert local worker change

* pare down logging

* Format and adjust comments

* Rework processing of cogs and update of task

* Add project id and last_message to Task

* Add system and path to tile server model

* Fix formatting and add missing user

* Fix project's tasks route

* Fix flake8

* Fix deleteTileServer

* Fix mistakes when refactoring to TileService

* Fix tests and circular import

* Fix use of task status

* fix mapillary callback state

* fix typo

* fix mapillary delete

* fix delete route formatting

* linting

* Fix linting from bad merge conflict resolution

* Fix mistake where uuid wasn't set

* Add exception handling to websocket handler

* Tweek when we send notification with task

* Fix formatting issues

* Fix delting of internal cog

* celery worker user 1100

* Revert "celery worker user 1100"

This reverts commit d9bf0bcf730c72abfd3d64c937a6f1534ac9ef8b.

* Add logger statements

* Fix formatting

* Fix GDAL permission error by running gdalwarp in destination directory

* Use tmp directory on assets for downloading

* Supress litestart specific warnings durign tests

* Fix use of transformer due to pyproj change

* Add unit tests

* Add unit tests

* Allow x-csrftoken-local

---------

Co-authored-by: Sal Tijerina <r.sal.tijerina@gmail.com>

--- a/devops/docker-compose.local.yml
+++ b/devops/docker-compose.local.yml
@@ -76,6 +76,7 @@ services:
     container_name: geoapi_nginx
     depends_on:
       - backend
+      - titiler
 
   workers:
     <<: *worker-base  # Reuses worker-base fragment defined at start
@@ -91,6 +92,22 @@ services:
     <<: *worker-base  # Reuses worker-base fragment defined at start
     container_name: geoapi_celerybeat
     command: "celery -A geoapi.celery_app beat --schedule=/var/run/celery/celerybeat-schedule -l info --uid=1100 --gid=1100"
+
+  titiler:
+    image: ghcr.io/developmentseed/titiler:0.23.1
+    platform: linux/amd64
+    container_name: geoapi_titiler
+    environment:
+      # GDAL settings
+      - GDAL_CACHEMAX=1024
+      - GDAL_DISABLE_READDIR_ON_OPEN=EMPTY_DIR
+      - VSI_CACHE=TRUE
+      - VSI_CACHE_SIZE=1000000
+      # CORS settings - CRITICAL
+      - TITILER_API_CORS_ORIGINS=http://localhost:4200,http://localhost:8888
+      - TITILER_API_CORS_ALLOW_CREDENTIALS=true
+    volumes:
+      - assets:/assets:ro
 
   backend:
     image: taccaci/geoapi:local
