--- a/devops/database/docker-compose-database.yml
+++ b/devops/database/docker-compose-database.yml
@@ -4,7 +4,7 @@ services:
     env_file: ../../../secret.env # username/password
     volumes:
       - /database:/var/lib/postgresql/data
-      - ./postgresql.conf:/var/lib/postgresql/data/postgresql.conf:ro
+      - ./postgresql.conf:/var/lib/postgresql/data/postgresql.conf:ro   # Comment out on initial db setup run!
     ports:
       - "5432:5432"
     stdin_open: true
